fix the warning message gets too long, and added job failed page

--- a/src/app/components/clean/results/results.component.scss
+++ b/src/app/components/clean/results/results.component.scss
@@ -113,3 +113,8 @@ a:link, a:visited, a:active {
         margin: 0px;
     }
 }
+
+.failJob {
+    margin: auto;
+    text-align: center;    
+}
